testsuite/escript/errors/errors010-reserved-word-syntax-error.err1
Non-identifier declared as a variable: 'is'